nginx-demo/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    run: my-nginx
spec:
  ports:
  - port: 8001
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: my-nginx
